--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -3,7 +3,7 @@
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
-dock_4_selected_tab_idx=0
+dock_4_selected_tab_idx=1
 dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
@@ -11,7 +11,7 @@ dock_8_selected_tab_idx=0
 dock_floating={}
 dock_split_2=0
 dock_split_3=0
-dock_hsplit_1=0
+dock_hsplit_1=171
 dock_hsplit_2=270
 dock_hsplit_3=-270
 dock_hsplit_4=0
@@ -19,17 +19,19 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://ART/Legacy-Fantasy - High Forest 2.3/Character/Idle/Idle-Sheet.png")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ART/", "res://ART/Legacy-Fantasy - High Forest 2.3/", "res://ART/Legacy-Fantasy - High Forest 2.3/Character/", "res://ART/Legacy-Fantasy - High Forest 2.3/Character/Idle/", "res://ART/Legacy-Fantasy - High Forest 2.3/Background/", "res://ART/Legacy-Fantasy - High Forest 2.3/Assets/")
+dock_split_1=0
+dock_1="FileSystem"
 dock_3="Scene,Import"
-dock_4="FileSystem"
-dock_5="Inspector,Node,History"
+dock_4="Inspector,Node"
+dock_5="History"
 
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Levels/test_level.tscn", "res://Characters/player.tscn")
-current_scene="res://Levels/test_level.tscn"
-center_split_offset=-252
+current_scene="res://Characters/player.tscn"
+center_split_offset=-192
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
