--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Enemies/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://ART/", "res://ART/Legacy-Fantasy - High Forest 2.3/")
+dock_filesystem_selected_paths=PackedStringArray("res://Characters/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Characters/", "res://ART/", "res://ART/Legacy-Fantasy - High Forest 2.3/")
 dock_split_1=0
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
@@ -28,8 +28,8 @@ dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://UI/health_bar/health_bar.tscn", "res://UI/game_screen.tscn", "res://Characters/player.tscn", "res://Enemies/enemy_slime.tscn")
-current_scene="res://Enemies/enemy_slime.tscn"
+open_scenes=PackedStringArray("res://UI/health_bar/health_bar.tscn", "res://UI/game_screen.tscn", "res://Enemies/enemy_slime.tscn", "res://Characters/player.tscn")
+current_scene="res://Characters/player.tscn"
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Enemies/enemy_slime.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://Character/player.gd", "res://Characters/player.gd"]
-selected_script="res://Enemies/enemy_slime.gd"
+open_scripts=["res://Enemies/enemy_slime.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://Characters/player.gd"]
+selected_script="res://Characters/player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
