--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,9 +1,9 @@
 [docks]
 
-dock_1_selected_tab_idx=0
+dock_1_selected_tab_idx=1
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
-dock_4_selected_tab_idx=0
+dock_4_selected_tab_idx=1
 dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
@@ -11,28 +11,28 @@ dock_8_selected_tab_idx=0
 dock_floating={}
 dock_split_2=0
 dock_split_3=0
-dock_hsplit_1=0
-dock_hsplit_2=324
+dock_hsplit_1=167
+dock_hsplit_2=234
 dock_hsplit_3=-247
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Background/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Levels/", "res://ART/", "res://ART/Legacy-Fantasy - High Forest 2.3/")
+dock_filesystem_selected_paths=PackedStringArray("res://Levels/test_levels/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Mob/", "res://Levels/", "res://ART/", "res://ART/Legacy-Fantasy - High Forest 2.3/")
 dock_split_1=0
+dock_1="History,FileSystem"
 dock_3="Scene,Import"
-dock_4="FileSystem"
-dock_5="Inspector,Node,History"
+dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/base_level.tscn")
-current_scene="res://Levels/base_level.tscn"
-center_split_offset=-270
+open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Characters/player.tscn", "res://fx/bullet.tscn", "res://Enemies/enemy_slime.tscn", "res://Levels/test_levels/test_level.tscn")
+current_scene="res://Enemies/enemy_slime.tscn"
+center_split_offset=-192
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
@@ -51,10 +51,10 @@ selected_shader=""
 
 [editor_log]
 
-log_filter_0=true
-log_filter_2=true
-log_filter_1=true
-log_filter_3=true
-log_filter_4=true
+log_filter_0=false
+log_filter_2=false
+log_filter_1=false
+log_filter_3=false
+log_filter_4=false
 collapse=false
 show_search=true
