--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=0
+dock_split_2=3
 dock_split_3=0
 dock_hsplit_1=167
 dock_hsplit_2=234
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Levels/test_levels/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Mob/", "res://Levels/", "res://ART/", "res://ART/Legacy-Fantasy - High Forest 2.3/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray()
 dock_split_1=0
 dock_1="History,FileSystem"
 dock_3="Scene,Import"
@@ -28,8 +28,8 @@ dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Characters/player.tscn", "res://fx/bullet.tscn", "res://Enemies/enemy_slime.tscn", "res://Levels/test_levels/test_level.tscn")
-current_scene="res://Enemies/enemy_slime.tscn"
+open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Characters/player.tscn", "res://fx/bullet.tscn", "res://Enemies/enemy_slime.tscn")
+current_scene="res://Characters/player.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -38,8 +38,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Levels/AnimationPlayer.gd", "res://Enemies/enemy_slime.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://Characters/player.gd"]
-selected_script="res://Enemies/enemy_slime.gd"
-open_help=[]
+selected_script="res://Scripts/health_manager.gd"
+open_help=["CharacterBody2D"]
 script_split_offset=70
 list_split_offset=0
 
@@ -51,8 +51,8 @@ selected_shader=""
 
 [editor_log]
 
-log_filter_0=false
-log_filter_2=false
+log_filter_0=true
+log_filter_2=true
 log_filter_1=false
 log_filter_3=false
 log_filter_4=false
