--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -3,7 +3,7 @@
 dock_1_selected_tab_idx=1
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
-dock_4_selected_tab_idx=1
+dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
@@ -11,7 +11,7 @@ dock_8_selected_tab_idx=0
 dock_floating={}
 dock_split_2=3
 dock_split_3=0
-dock_hsplit_1=167
+dock_hsplit_1=170
 dock_hsplit_2=234
 dock_hsplit_3=-247
 dock_hsplit_4=0
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Levels/")
 dock_split_1=0
 dock_1="History,FileSystem"
 dock_3="Scene,Import"
@@ -28,17 +28,17 @@ dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Characters/player.tscn", "res://fx/bullet.tscn", "res://Enemies/enemy_slime.tscn")
-current_scene="res://Characters/player.tscn"
+open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Enemies/enemy_slime.tscn")
+current_scene="res://Levels/base_level.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Levels/AnimationPlayer.gd", "res://Enemies/enemy_slime.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://Characters/player.gd"]
-selected_script="res://Scripts/health_manager.gd"
+selected_script="res://Characters/player.gd"
 open_help=["CharacterBody2D"]
 script_split_offset=70
 list_split_offset=0
