--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=3
 dock_split_3=0
 dock_hsplit_1=170
 dock_hsplit_2=234
-dock_hsplit_3=-247
+dock_hsplit_3=-399
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=1
@@ -24,7 +24,8 @@ dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Levels/")
 dock_split_1=0
 dock_1="History,FileSystem"
 dock_3="Scene,Import"
-dock_4="Inspector,Node"
+dock_4="Node"
+dock_5="Inspector"
 
 [EditorNode]
 
