--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,7 +29,7 @@ dock_5="Inspector"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Enemies/enemy_slime.tscn")
+open_scenes=PackedStringArray("res://Levels/base_level.tscn")
 current_scene="res://Levels/base_level.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
@@ -39,7 +39,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Levels/AnimationPlayer.gd", "res://Enemies/enemy_slime.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://Characters/player.gd"]
-selected_script="res://Characters/player.gd"
+selected_script="res://Enemies/enemy_slime.gd"
 open_help=["CharacterBody2D"]
 script_split_offset=70
 list_split_offset=0
