--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -39,7 +39,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Levels/AnimationPlayer.gd", "res://Enemies/enemy_slime.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://Characters/player.gd"]
-selected_script="res://Enemies/enemy_slime.gd"
+selected_script="res://Characters/player.gd"
 open_help=["CharacterBody2D"]
 script_split_offset=70
 list_split_offset=0
