--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,7 +12,7 @@ dock_floating={}
 dock_split_2=3
 dock_split_3=0
 dock_hsplit_1=170
-dock_hsplit_2=234
+dock_hsplit_2=170
 dock_hsplit_3=-399
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -29,9 +29,9 @@ dock_5="Inspector"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/base_level.tscn")
-current_scene="res://Levels/base_level.tscn"
-center_split_offset=-252
+open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Characters/player.tscn")
+current_scene="res://Characters/player.tscn"
+center_split_offset=-192
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
