--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,8 +29,8 @@ dock_5="Inspector"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Characters/player.tscn")
-current_scene="res://Characters/player.tscn"
+open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Assets/moving_platform.tscn", "res://Background/foreground.tscn")
+current_scene="res://Levels/base_level.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
