Rework jump physics

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,9 +1,9 @@
 [docks]
 
-dock_1_selected_tab_idx=1
+dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
-dock_4_selected_tab_idx=0
+dock_4_selected_tab_idx=1
 dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
@@ -12,35 +12,33 @@ dock_floating={}
 dock_split_2=3
 dock_split_3=0
 dock_hsplit_1=170
-dock_hsplit_2=170
+dock_hsplit_2=259
 dock_hsplit_3=-399
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Levels/")
 dock_split_1=0
-dock_1="History,FileSystem"
-dock_3="Scene,Import"
-dock_4="Node"
-dock_5="Inspector"
+dock_3="Scene,Import,Inspector"
+dock_4="Node,FileSystem,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Assets/moving_platform.tscn", "res://Background/foreground.tscn")
-current_scene="res://Levels/base_level.tscn"
+open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Assets/moving_platform.tscn", "res://Background/foreground.tscn", "res://UI/game_screen.tscn", "res://Characters/player.tscn")
+current_scene="res://Characters/player.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Levels/AnimationPlayer.gd", "res://Enemies/enemy_slime.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://Characters/player.gd"]
+open_scripts=["res://Enemies/enemy_slime.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://Characters/player.gd"]
 selected_script="res://Characters/player.gd"
-open_help=["CharacterBody2D"]
+open_help=[]
 script_split_offset=70
 list_split_offset=0
 
