Added health bar, health updates, enemy knockback

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"CollisionShape2D",
+"class": &"FacingCollisionShape2D",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Characters/FacingCollisionShape2D.gd"
+}, {
 "base": &"CharacterBody2D",
 "class": &"Player",
 "icon": "",
