(WIP) added platform.zip contents

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=3
 dock_split_3=0
 dock_hsplit_1=280
 dock_hsplit_2=276
-dock_hsplit_3=-399
+dock_hsplit_3=-328
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=1
@@ -30,14 +30,14 @@ dock_5="Inspector"
 
 open_scenes=PackedStringArray("res://Levels/base_level.tscn", "res://Assets/moving_platform.tscn", "res://Background/foreground.tscn", "res://Characters/player.tscn", "res://Enemies/Virus1/virus_1.tscn", "res://UI/hearts_container.tscn", "res://UI/heart_gui.tscn")
 current_scene="res://Enemies/Virus1/virus_1.tscn"
-center_split_offset=-192
+center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Levels/base_level.gd", "res://Characters/FacingCollisionShape2D.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://UI/hearts_container.gd", "res://UI/heart_gui.gd", "res://Characters/MeleeArea.gd", "res://Characters/player.gd", "res://Enemies/Virus1/virus_1.gd"]
+open_scripts=["res://Levels/base_level.gd", "res://Enemies/Virus1/Damageable.gd", "res://Characters/FacingCollisionShape2D.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://UI/hearts_container.gd", "res://UI/heart_gui.gd", "res://Characters/MeleeArea.gd", "res://Enemies/Virus1/Node.gd", "res://Characters/player.gd", "res://Enemies/Virus1/virus_1.gd"]
 selected_script="res://Characters/player.gd"
 open_help=[]
 script_split_offset=70
