--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"Node",
+"class": &"Damageable",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Enemies/Virus1/Damageable.gd"
+}, {
 "base": &"CollisionShape2D",
 "class": &"FacingCollisionShape2D",
 "icon": "",
