--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -46,4 +46,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Character/Player/State.gd"
+}, {
+"base": &"CharacterBody2D",
+"class": &"Virus_1",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Enemies/Virus1/virus_1.gd"
 }])
