--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/HP/Desktop/Desktop Icons/Godot_v4.2.1-stable_win64.exe"
+executable_path="C:/Users/abbya/AppData/Local/Temp/84b0b9c6-3f34-4191-bbd3-365be9da5003_Godot_v4.2.2-stable_win64.exe.zip.003/Godot_v4.2.2-stable_win64.exe"
 tile_source_sort=0
 tile_snap_option=0
 tile_snap_subdiv=4.0
