--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -47,6 +47,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Character/Player/State.gd"
 }, {
+"base": &"Control",
+"class": &"Transitioner",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/transition.gd"
+}, {
 "base": &"CharacterBody2D",
 "class": &"Virus_1",
 "icon": "",
