death animation + UI main menu

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -35,6 +35,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Character/Player/HitState.gd"
 }, {
+"base": &"Control",
+"class": &"Mainmenu",
+"icon": "",
+"language": &"GDScript",
+"path": "res://UI/main_menu.gd"
+}, {
 "base": &"CharacterBody2D",
 "class": &"Player",
 "icon": "",
