font and ui edits

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -78,7 +78,7 @@ advanced_mode=true
 
 [color_picker]
 
-recent_presets=PackedColorArray(1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0.500741, 1.2153e-06, 1.44392e-07, 1)
+recent_presets=PackedColorArray(0.95, 0.95, 0.95, 1, 0.661926, 0.784199, 0.941406, 1, 0.222665, 0.213089, 0.519531, 1, 0.167969, 0.103668, 0.115725, 1, 0.103668, 0.116729, 0.167969, 1, 0.150589, 0.176336, 0.277344, 1, 0.132111, 0.163991, 0.289063, 1, 1, 1, 1, 1, 0.0721292, 0.0306091, 0.132813, 1)
 
 [scripts_panel]
 
