--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://UI/main_menu.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://Character/Enemies/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://Character/Enemies/", "res://Assets/")
 dock_split_1=0
 dock_3="Scene,Import"
 dock_4="Node,FileSystem,History"
@@ -29,16 +29,16 @@ dock_5="Inspector"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://UI/main_menu.tscn", "res://Levels/base_level.tscn", "res://Background/map_1.tscn", "res://Background/elevations_3.tscn", "res://Characters/player.tscn", "res://Enemies/Virus1/virus_1.tscn", "res://Scripts/wander.tscn", "res://UI/youdied.tscn")
-current_scene="res://UI/youdied.tscn"
+current_scene="res://UI/main_menu.tscn"
 center_split_offset=-258
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=10
 
 [ScriptEditor]
 
 open_scripts=["res://Levels/base_level.gd", "res://Levels/CheckButton.gd", "res://Enemies/Virus1/Damageable.gd", "res://Enemies/enemy_slime.gd", "res://Characters/FacingCollisionShape2D.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://UI/hearts_container.gd", "res://UI/heart_gui.gd", "res://UI/main_menu.gd", "res://Characters/MeleeArea.gd", "res://Characters/player.gd", "res://Scripts/transition.gd", "res://Enemies/Virus1/Virus1_HealthBar.gd", "res://Enemies/Virus1/virus_1.gd", "res://wander.gd", "res://UI/youdied.gd"]
-selected_script="res://UI/youdied.gd"
+selected_script="res://UI/main_menu.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
