--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 138,
-"scroll_position": 24.0,
+"row": 189,
+"scroll_position": 143.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -269,16 +269,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 17,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 16,
-"selection_to_column": 18,
-"selection_to_line": 17,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
