--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -64,4 +64,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Enemies/Virus1/virus_1.gd"
+}, {
+"base": &"CharacterBody2D",
+"class": &"Virus_3",
+"icon": "",
+"language": &"GDScript",
+"path": "res://virus_2.gd"
 }])
