slime fixed push

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://wander.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Enemies/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://Character/Enemies/", "res://Assets/")
 dock_split_1=0
 dock_3="Scene,Import"
@@ -28,8 +28,8 @@ dock_5="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UI/main_menu.tscn", "res://UI/youdied.tscn", "res://Levels/base_level.tscn", "res://Background/map_1.tscn", "res://Background/elevations_3.tscn", "res://Characters/player.tscn", "res://Enemies/Virus1/virus_1.tscn", "res://UI/virus_3.tscn")
-current_scene="res://Enemies/Virus1/virus_1.tscn"
+open_scenes=PackedStringArray("res://UI/main_menu.tscn", "res://UI/youdied.tscn", "res://Levels/base_level.tscn", "res://Background/map_1.tscn", "res://Background/elevations_3.tscn", "res://Characters/player.tscn", "res://Enemies/Virus1/virus_1.tscn", "res://Enemies/virus_3.tscn")
+current_scene="res://Levels/base_level.tscn"
 center_split_offset=-258
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,8 +37,8 @@ selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://Levels/base_level.gd", "res://Levels/CheckButton.gd", "res://Enemies/Virus1/Damageable.gd", "res://Enemies/enemy_slime.gd", "res://Characters/FacingCollisionShape2D.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://UI/hearts_container.gd", "res://UI/heart_gui.gd", "res://UI/main_menu.gd", "res://Characters/MeleeArea.gd", "res://Characters/player.gd", "res://Scripts/transition.gd", "res://Enemies/Virus1/Virus1_HealthBar.gd", "res://Enemies/Virus1/virus_1.gd", "res://virus_2.gd", "res://wander.gd", "res://UI/youdied.gd"]
-selected_script="res://Enemies/Virus1/virus_1.gd"
+open_scripts=["res://Levels/base_level.gd", "res://Levels/CheckButton.gd", "res://Enemies/Virus1/Damageable.gd", "res://Enemies/enemy_slime.gd", "res://Characters/FacingCollisionShape2D.gd", "res://UI/health_bar/health_bar.gd", "res://Scripts/health_manager.gd", "res://UI/hearts_container.gd", "res://UI/heart_gui.gd", "res://UI/main_menu.gd", "res://Characters/MeleeArea.gd", "res://Characters/player.gd", "res://Scripts/transition.gd", "res://Enemies/Virus1/Virus1_HealthBar.gd", "res://Enemies/Virus1/virus_1.gd", "res://Enemies/virus_2.gd", "res://wander.gd", "res://UI/youdied.gd"]
+selected_script="res://Levels/base_level.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
