--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -69,5 +69,5 @@ list=Array[Dictionary]([{
 "class": &"Virus_3",
 "icon": "",
 "language": &"GDScript",
-"path": "res://virus_2.gd"
+"path": "res://Enemies/virus_3.gd"
 }])
